--- a/Html-css-javascript/Game/index.html
+++ b/Html-css-javascript/Game/index.html
@@ -15,5 +15,6 @@
         "/assets/images/undertale-pixel-art-pixelart-385b14d75ee4743c0e3cb8fd41e9c0c0.png"
         class="pipe">
     </div>
+    <input class='reinicio'type="button" value="Reiniciar o jogo" onClick="window.location.reload()">
 </body>
 </html>
